crates/cli/src/snapshots/mltrs_cli__build_tasks__tests__alignment_tests@src__generated__shader_atlas__std430_nested_structs.rs.snap
---
source: crates/cli/src/build_tasks.rs
info:
  relative_path: src/generated/shader_atlas/std430_nested_structs.rs
---
// GENERATED FILE (do not edit directly)

//! generated from slang shader: std430_nested_structs.shader.slang

use std::ffi::CString;
use std::io::Cursor;

use ash::util::read_spv;
use ash::vk;
use serde::Serialize;

use crate::renderer::render_graph::GPUWrite;
#[allow(unused)]
use crate::renderer::vertex_description::{NoVertex, VertexDescription};
use crate::renderer::*;
use crate::shaders::atlas::{PrecompiledShader, PrecompiledShaders, ShaderAtlasEntry};
use crate::shaders::json::{ReflectedPipelineLayout, ReflectionJson};

// glam must be built without its scalar-math feature (GPU layouts need align-16 Vec4)
const _: () = assert!(std::mem::align_of::<glam::Vec4>() == 16);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(16))]
pub struct Params {
    pub data: Addr<OuterData>,
    pub _padding_0: [u8; 8],
}

impl GPUWrite for Params {}
const _: () = assert!(std::mem::size_of::<Params>() == 16);
const _: () = assert!(std::mem::offset_of!(Params, data) == 0);
const _: () = assert!(std::mem::size_of::<Addr<OuterData>>() == 8);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(16))]
pub struct OuterData {
    pub x: f32,
    pub _padding_0: [u8; 4],
    pub inner: InnerData,
    pub y: f32,
    pub _padding_1: [u8; 4],
}

impl GPUWrite for OuterData {}
const _: () = assert!(std::mem::size_of::<OuterData>() == 32);
const _: () = assert!(std::mem::offset_of!(OuterData, x) == 0);
const _: () = assert!(std::mem::size_of::<f32>() == 4);
const _: () = assert!(std::mem::offset_of!(OuterData, inner) == 8);
const _: () = assert!(std::mem::size_of::<InnerData>() == 16);
const _: () = assert!(std::mem::offset_of!(OuterData, y) == 24);
const _: () = assert!(std::mem::size_of::<f32>() == 4);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(8))]
pub struct InnerData {
    pub a: f32,
    pub _padding_0: [u8; 4],
    pub b: glam::Vec2,
}

impl GPUWrite for InnerData {}
const _: () = assert!(std::mem::size_of::<InnerData>() == 16);
const _: () = assert!(std::mem::offset_of!(InnerData, a) == 0);
const _: () = assert!(std::mem::size_of::<f32>() == 4);
const _: () = assert!(std::mem::offset_of!(InnerData, b) == 8);
const _: () = assert!(std::mem::size_of::<glam::Vec2>() == 8);

pub struct Resources<'a> {
    pub params_buffer: &'a UniformBufferHandle<Params>,
}

#[derive(Debug, Clone, Copy)]
pub struct ParamsBindings {
    pub data: BufferBinding<OuterData>,
}

impl GraphParamBindingSet for ParamsBindings {
    type Pending = PendingParamBindings<Self>;

    fn pending() -> Self::Pending {
        Self::Pending::new()
    }
}

impl GraphBindingSet for ParamsBindings {
    fn visit(&self, f: &mut dyn FnMut(GraphBinding)) {
        f(GraphBinding::Buffer(self.data.erased()));
    }
}
/// Complete graph inputs before resource references resolve to GPU values.
#[derive(Debug, Clone, Copy)]
pub struct ParamsInput {
    pub data: BufferBinding<OuterData>,
}

impl GraphShaderParams for Params {
    type Data = ();
    type Bindings = ParamsBindings;
    type Input = ParamsInput;

    fn input(_data: &Self::Data, bindings: &Self::Bindings) -> Self::Input {
        Self::Input {
            data: bindings.data,
        }
    }

    fn assemble_input(input: &Self::Input, resolver: &BindingResolver<'_>) -> Self {
        Self {
            data: resolver.buf(input.data),
            _padding_0: Default::default(),
        }
    }
}

impl GraphBindingSet for ParamsInput {
    fn visit(&self, f: &mut dyn FnMut(GraphBinding)) {
        f(GraphBinding::Buffer(self.data.erased()));
    }
}

#[derive(Clone)]
pub struct Shader {
    pub reflection_json: ReflectionJson,
}

impl Shader {
    pub fn init() -> Self {
        let json_str = include_str!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/std430_nested_structs.json"
        ));

        let reflection_json: ReflectionJson = serde_json::from_str(json_str).unwrap();

        Self { reflection_json }
    }

    pub fn pipeline_config<'a>(
        &self,
        resources: Resources<'a>,
    ) -> PipelineConfig<'a, NoVertex, DrawVertexCount, NoPush> {
        // NOTE each of these must be in descriptor set layout order in the reflection json

        #[rustfmt::skip]
        let texture_handles = vec![
        ];

        #[rustfmt::skip]
        let uniform_buffer_handles = vec![
            RawUniformBufferHandle::from_typed(resources.params_buffer),
        ];

        #[rustfmt::skip]
        let storage_texture_handles = vec![
        ];

        PipelineConfigBuilder {
            shader: Box::new(self.clone()),
            texture_handles,
            uniform_buffer_handles,
            storage_texture_handles,
        }
        .build_vertex_count()
    }

    fn vert_entry_point_name(&self) -> CString {
        let entry_point = self
            .reflection_json
            .vertex_entry_point
            .entry_point_name
            .clone();

        CString::new(entry_point).unwrap()
    }

    fn frag_entry_point_name(&self) -> CString {
        let entry_point = self
            .reflection_json
            .fragment_entry_point
            .entry_point_name
            .clone();

        CString::new(entry_point).unwrap()
    }

    fn vert_spv(&self) -> Vec<u32> {
        let bytes = include_bytes!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/std430_nested_structs.vert.spv"
        ));
        let byte_reader = &mut Cursor::new(bytes);
        read_spv(byte_reader).expect("failed to convert spv byte layout")
    }

    fn frag_spv(&self) -> Vec<u32> {
        let bytes = include_bytes!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/std430_nested_structs.frag.spv"
        ));
        let byte_reader = &mut Cursor::new(bytes);
        read_spv(byte_reader).expect("failed to convert spv byte layout")
    }
}

impl ShaderAtlasEntry for Shader {
    fn source_file_name(&self) -> &str {
        &self.reflection_json.source_file_name
    }

    fn vertex_binding_descriptions(&self) -> Vec<vk::VertexInputBindingDescription> {
        vec![]
    }

    fn vertex_attribute_descriptions(&self) -> Vec<vk::VertexInputAttributeDescription> {
        vec![]
    }

    fn layout_bindings(&self) -> Vec<Vec<LayoutDescription>> {
        self.reflection_json.layout_bindings()
    }

    fn precompiled_shaders(&self) -> PrecompiledShaders {
        let vert = PrecompiledShader {
            entry_point_name: self.vert_entry_point_name(),
            spv_bytes: self.vert_spv(),
        };

        let frag = PrecompiledShader {
            entry_point_name: self.frag_entry_point_name(),
            spv_bytes: self.frag_spv(),
        };

        PrecompiledShaders { vert, frag }
    }

    fn pipeline_layout(&self) -> &ReflectedPipelineLayout {
        &self.reflection_json.pipeline_layout
    }

    fn reflection_json(&self) -> &ReflectionJson {
        &self.reflection_json
    }
}
